examples/test/testpolicy7203.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7203
  namespace: namespace54
spec:
  podSelector:
    matchLabels:
      key9: value20
      key27: value27
      key24: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value41
      podSelector:
        matchLabels:
          key25: value4
          key24: value15
          key22: value3
